--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 # hugo server --minify --themesDir ... --baseURL=http://0.0.0.0:1313/theme/hugo-book/
-baseURL: https://notes.danielsantos.in
+baseURL: /
 
 # Book configuration
 disablePathToLower: true
